adds dishes table using knex migrations

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "license": "MIT",
+  "name": "webdb-iv-challenge",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
     "helmet": "^3.16.0",
